--- a/skel/.config/waybar/style.css
+++ b/skel/.config/waybar/style.css
@@ -171,15 +171,15 @@ label:focus {
   color: #2d3436;
 }
 
-#tray > .passive {
-  -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-  -gtk-icon-effect: highlight;
-  background-color: #eb4d4b;
-}
-
+/* #tray > .passive { */
+/*   -gtk-icon-effect: dim; */
+/* } */
+/**/
+/* #tray > .needs-attention { */
+/*   -gtk-icon-effect: highlight; */
+/*   background-color: #eb4d4b; */
+/* } */
+/**/
 /*
 
 window#waybar.solo {
