--- a/skel/.config/waybar/style.css
+++ b/skel/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: "Noto Sans CJK KR Regular";
+  font-family: sans;
   /*font-family: "D2CodingLigature Nerd Mono";*/
   font-size: 13px;
   min-height: 0;
